@@ -188,3 +188,4 @@ v 2.0:
 	- Fix loading users with only numerals in their names to be seen as strings.
 	- Ignore any sub folders in the Worlds folder which start with a period (fix for storing data in svn respoitories).
 	- Throw a better error than 'null' when someone removes all groups from a yml.
+	- Stop force removing attachments and let Bukkit handle it's own mess.
